# rkvm

./: Cargo.toml  LICENSE  README.md  switch-keys.md
.github/: FUNDING.yml
.github/workflows/: release.yml
certificate-gen/: Cargo.toml
certificate-gen/src/: main.rs
client/: Cargo.toml
client/src/: config.rs  main.rs
example/: certificate.crt  client.toml  key.pem  rkvm-client.service  rkvm-server.service  server.toml
input/: Cargo.toml  build.rs  wrapper.h
input/glue/: glue.h
input/setup/: setup.c  setup.h
input/src/: async_file.rs  bindings.rs  device_id.rs  event.rs  event_manager.rs  event_reader.rs  event_writer.rs  lib.rs  linux.rs  setup.rs  windows.rs
input/src/event/: button.rs  key.rs
input/src/linux/: event.rs  event_reader.rs  event_writer.rs  glue.rs
input/src/linux/event/: button.rs  key.rs
input/src/windows/: event.rs  event_manager.rs  event_writer.rs  oot.rs
input/src/windows/event/: button.rs  key.rs
net/: Cargo.toml
net/src/: lib.rs
proto/: Cargo.toml
proto/src/: event.rs  lib.rs
rkvm-certificate-gen/: Cargo.toml
rkvm-certificate-gen/src/: main.rs
rkvm-client/: Cargo.toml
rkvm-client/src/: client.rs  config.rs  main.rs  tls.rs
rkvm-config/: Cargo.toml
rkvm-config/src/: lib.rs
rkvm-input/: Cargo.toml  build.rs
rkvm-input/glue/: check.h  glue.h
rkvm-input/src/: abs.rs  convert.rs  evdev.rs  event.rs  event_manager.rs  event_reader.rs  event_writer.rs  interceptor.rs  key.rs  lib.rs  linux.rs  monitor.rs  registry.rs  rel.rs  sync.rs  uinput.rs  windows.rs  writer.rs
rkvm-input/src/event/: button.rs  key.rs
rkvm-input/src/interceptor/: caps.rs
rkvm-input/src/key/: button.rs  keyboard.rs
rkvm-input/src/linux/: event.rs  event_manager.rs  event_reader.rs  event_writer.rs
rkvm-input/src/linux/event/: button.rs  key.rs
rkvm-input/src/windows/: event_manager.rs
rkvm-net/: Cargo.toml
rkvm-net/src/: auth.rs  lib.rs  message.rs  socket.rs  version.rs
rkvm-server/: Cargo.toml
rkvm-server/src/: config.rs  main.rs  server.rs  tls.rs
server/: Cargo.toml
server/src/: config.rs  main.rs
systemd/: rkvm-client.service  rkvm-server.service
