[package]
name = "certificate-gen"
version = "0.1.0"
authors = ["htrefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
tempfile = "3.1.0"
anyhow = "1.0.33"
