[package]
name = "input"
version = "0.1.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.3", features = ["fs", "io-util", "net", "sync", "rt", "time"] }
libc = "0.2.77"
serde = { version = "1.0.117", features = ["derive"] }
inotify = "0.9.1"
futures = "0.3.7"

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0.60"
