[package]
name = "input"
version = "0.2.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
futures = "0.3.8"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.9.2"
tokio = { version = "1.0.1", features = ["fs", "io-util", "net", "sync", "rt", "time"] }
libc = "0.2.77"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
tokio = { version = "1.0.1", features = ["sync"] }

[build-dependencies]
bindgen = "0.55.1"
pkg-config = "0.3.19"
