[package]
name = "net"
version = "0.2.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = { path = "../input" }
serde = { version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
tokio = { version = "0.3.2", features = ["io-util"] }
