[package]
name = "rkvm-certificate-gen"
version = "0.6.1"
authors = ["htrefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
tempfile = "3.1.0"
thiserror = "1.0.40"
