[package]
name = "rkvm-client"
license = "MIT"
version = "0.6.1"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["macros", "time", "fs", "net", "signal", "rt-multi-thread", "sync"] }
rkvm-input = { path = "../rkvm-input" }
rkvm-net = { path = "../rkvm-net" }
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
clap = { version = "4.2.2", features = ["derive"] }
thiserror = "1.0.40"
rustls-pemfile = "2.1.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
quinn = "0.11.2"

[package.metadata.rpm]
package = "rkvm-client"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
client = { path = "/usr/bin/rkvm-client" }
