[package]
name = "rkvm-input"
version = "0.1.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
futures = "0.3.8"
smallvec = { version = "1.10.0", features = ["serde"] }
inotify = "0.10.0"
tokio = { version = "1.0.1", features = ["fs", "io-util", "net", "sync", "rt", "time", "macros"] }
libc = "0.2.77"
log = "0.4.11"
thiserror = "1.0.40"

[build-dependencies]
bindgen = "0.65.1"
pkg-config = "0.3.19"
