[package]
name = "rkvm-server"
license = "MIT"
version = "0.2.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["macros", "time", "fs", "net", "signal", "rt-multi-thread", "sync"] }
rkvm-input = { path = "../rkvm-input" }
rkvm-net = { path = "../rkvm-net" }
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
log = "0.4.11"
env_logger = "0.8.1"
clap = { version = "4.2.2", features = ["derive"] }
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
thiserror = "1.0.40"
slab = "0.4.8"

[package.metadata.rpm]
package = "rkvm-server"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
server = { path = "/usr/bin/rkvm-server" }
