[package]
name = "rkvm-server"
license = "MIT"
version = "0.5.1"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["macros", "time", "fs", "net", "signal", "rt-multi-thread", "sync"] }
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
env_logger = "0.8.1"
clap = { version = "4.2.2", features = ["derive"] }
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
thiserror = "1.0.40"
slab = "0.4.8"
rand = "0.8.5"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
rkvm-net = { path = "../rkvm-net" }
rkvm-input = { path = "../rkvm-input" }

[package.metadata.rpm]
package = "rkvm-server"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
server = { path = "/usr/bin/rkvm-server" }
